# qt-patcher

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  arguments.cpp  arguments.h  binarypatcher.cpp  binarypatcher.h  main.cpp  patcher.h  patcherapplication.cpp  patcherapplication.h  textpatcher.cpp  textpatcher.h
src/utils/: fileutils.cpp  fileutils.h  stringformat.cpp  stringformat.h  stringutils.cpp  stringutils.h
